import "goby/protobuf/dccl_option_extensions.proto";
import "goby/protobuf/queue_option_extensions.proto";
import "goby/protobuf/header.proto";

message GobyMessage
{
  option (dccl_msg).id = 4;
  option (dccl_msg).max_bytes = 32;
  option (queue_msg).encode_on_demand = true;
  option (queue_msg).on_demand_skew_seconds = 0.1;

  // one byte
  required int32 telegram = 1 [(dccl_field).min=0, (dccl_field).max=254];  
}

